tests/NormalTests/paczka1/small_fuzzy/21512443.err
Error in line 3: S723 S874 56,1
Error in line 7: S723 S26 63,9
Error in line 5: ort8xMZlFPw S874 42,6
